// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> when loading when determinate renders a Loader 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
      class="loader overlay determinate"
    >
      Loading
      <div
        class="loadingIndicator"
      >
        <div
          class="determinate"
        >
          <progress
            class="ProgressBar small"
            max="100"
            value="0"
          >
            0
            %
          </progress>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Loader /> when loading when not determinate renders a Loader 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
      class="loader overlay"
    >
      Loading
      <div
        class="loadingIndicator"
      >
        <div
          aria-busy="true"
          aria-label="loading"
          class="spinner small"
          role="alert"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Loader /> when not loading when determinate renders a Loader 1`] = `
<div>
  Loading
</div>
`;

exports[`<Loader /> when not loading when not determinate renders a Loader 1`] = `
<div>
  Loading
</div>
`;
